Add profile link to menu, add icons to menu

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -466,6 +466,7 @@
           "categories": "Categories",
           "close": "Close",
           "dashboard": "Dashboard",
+          "profile": "My Profile",
           "sign_in": "Sign In",
           "sign_out": "Sign Out",
           "sign_up": "Sign Up",
