--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -489,6 +489,7 @@
           "categories": "Categorias",
           "close": "Fechar",
           "dashboard": "Dashboard",
+          "profile": "Meu Perfil",
           "sign_in": "Fazer Login",
           "sign_out": "Sair da Conta",
           "sign_up": "Criar conta",
