--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -58,6 +58,7 @@ en:
         dashboard: Dashboard
         accounts: Accounts
         categories: Categories
+        profile: My Profile
         sign_in: Sign In
         sign_up: Sign Up
         sign_out: Sign Out
