--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -59,6 +59,7 @@ pt-BR:
         dashboard: Dashboard
         accounts: Contas
         categories: Categorias
+        profile: Meu Perfil
         sign_in: Fazer Login
         sign_up: Criar conta
         sign_out: Sair da Conta
