--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -485,7 +485,8 @@
           "sign_in": "Sign In",
           "sign_out": "Sign Out",
           "sign_up": "Sign Up",
-          "title": "Main Menu"
+          "title": "Main Menu",
+          "transactions": "Transactions"
         }
       },
       "profiles": {
