--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -56,6 +56,7 @@ en:
         title: Main Menu
         close: Close
         dashboard: Dashboard
+        transactions: Transactions
         accounts: Accounts
         categories: Categories
         profile: My Profile
