--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -56,6 +56,7 @@ pt-BR:
         title: Menu Principal
         close: Fechar
         dashboard: Dashboard
+        transactions: Transações
         accounts: Contas
         categories: Categorias
         profile: Meu Perfil
