Add profile section to vertical menu, layout improvements

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -484,6 +484,7 @@
           "accounts": "Accounts",
           "categories": "Categories",
           "close": "Close",
+          "current_account": "Account:",
           "dashboard": "Dashboard",
           "profile": "My Profile",
           "sign_in": "Sign In",
