--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -507,6 +507,7 @@
           "accounts": "Contas",
           "categories": "Categorias",
           "close": "Fechar",
+          "current_account": "Conta:",
           "dashboard": "Dashboard",
           "profile": "Meu Perfil",
           "sign_in": "Fazer Login",
