Display transactions in main dashboard page

--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -474,7 +474,7 @@
         }
       },
       "dashboard": {
-        "title": "Dashboard"
+        "title": "Transações"
       },
       "devise": {
         "alternative_links": "Ou, você também pode:",
