--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -32,7 +32,7 @@ pt-BR:
       show:
         title: Categoria
     dashboard:
-      title: Dashboard
+      title: Transações
     devise:
       alternative_links: 'Ou, você também pode:'
       sign_in: Fazer Login
