--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -451,7 +451,7 @@
         }
       },
       "dashboard": {
-        "title": "Dashboard"
+        "title": "Transactions"
       },
       "devise": {
         "alternative_links": "Or, you can also:",
