Use list format to display Accounts

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -428,6 +428,7 @@
           "currency": "Currency",
           "name": "Name",
           "new": "New Account",
+          "no_name": "--- No name ---",
           "title": "Accounts"
         }
       },
