--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -7,6 +7,7 @@ pt-BR:
         new: Nova conta
         name: Nome
         currency: Moeda
+        no_name: '--- Sem nome ---'
       form:
         new_title: Nova Conta
         edit_title: 'Editat Conta "%{account}"'
