Allow accounts to be shared between users

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -23,6 +23,13 @@
           }
         },
         "models": {
+          "account_user": {
+            "attributes": {
+              "user": {
+                "owner_self_share": "is already the owner of the account."
+              }
+            }
+          },
           "user": {
             "attributes": {
               "base": {
