--- a/config/locales/active_record.en.yml
+++ b/config/locales/active_record.en.yml
@@ -3,6 +3,10 @@ en:
   activerecord:
     errors:
       models:
+        account_user:
+          attributes:
+            user:
+              owner_self_share: is already the owner of the account.
         user:
           attributes:
             base:
