Display account share status in UI

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -436,6 +436,7 @@
           "name": "Name",
           "new": "New Account",
           "no_name": "--- No name ---",
+          "shared_text": "Shared with you by %{user}",
           "title": "Accounts"
         }
       },
