--- a/config/locales/active_record.pt-BR.yml
+++ b/config/locales/active_record.pt-BR.yml
@@ -4,11 +4,11 @@ pt-BR:
     models:
       user: Usuário
     attributes:
-      account_user:
+      account_share:
         user: Usuário
     errors:
       models:
-        account_user:
+        account_share:
           attributes:
             user:
               owner_self_share: já é o(a) dono(a) desta conta.
