--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -23,7 +23,7 @@
           }
         },
         "models": {
-          "account_user": {
+          "account_share": {
             "attributes": {
               "user": {
                 "owner_self_share": "is already the owner of the account."
