--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -8,14 +8,32 @@ pt-BR:
         name: Nome
         currency: Moeda
         no_name: '--- Sem nome ---'
-        shared_text: 'Compartilhado com você por %{user}'
+        shared_text: 'Compartilhada com você por %{user}'
       form:
         new_title: Nova Conta
-        edit_title: 'Editat Conta "%{account}"'
+        edit_title: 'Editar Conta "%{account}"'
         name_label: Nome
         currency_label: Selecione a Moeda
         submit: Salvar
         back: Voltar
+    account_share_invites:
+      index:
+        pending_invite_title_pending: Convite de Compartilhamento de Conta
+        pending_invite_title_accepted: Convite Aceito
+        pending_invite_title_rejected: Convite Rejeitado
+        pending_invite_text_pending: >
+          %{inviter} lhe convidou para compartilhar sua conta "%{account_name}". Uma conta compartilhada significa que
+          ambos poderão visualizar e gerenciar transações, categorias, e todos os outros aspectos associados
+          com a conta.
+        pending_invite_text_accepted: >
+          Você aceitou o convite de %{inviter} para compartilhar sua conta "%{account_name}". Você pode agora
+          visualizar e gerenciar transações, categorias, e todos os outros aspectos associados
+          com a conta.
+        pending_invite_text_rejected: >
+          Você negou o pedido de %{inviter} para compartilhar sua conta "%{account_name}". Você não terá acesso
+          à conta, porém você pode ser convidado novamente.
+        accept: Aceitar
+        reject: Rejeitar
     categories:
       index:
         title: Categorias
