--- a/config/locales/controllers.en.yml
+++ b/config/locales/controllers.en.yml
@@ -9,6 +9,11 @@ en:
     destroy:
       success: 'Account "%{name}" was successfully destroyed.'
 
+  account_share_invites:
+    create:
+      success: 'Your invite to share the account "%{account_name}" was successfully sent to "%{invitee}"!'
+      error: 'There was an error sending the invite to share the account "%{account_name}" with "%{invitee}": %{error}'
+
   categories:
     create:
       success: 'Category was successfully created.'
